Closed Bug 177720 Opened 23 years ago Closed 22 years ago

BeZilla FilePanel doesn't remember last visited (for Save) folder

Categories

(Core :: XUL, defect)

x86
BeOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sergei_d, Assigned: sergei_d)

Details

Attachments

(1 file, 3 obsolete files)

solution - remove mistakenly put (from beginning )parenthesises in FilePanel code. Patch will follow
Attached patch Patch (obsolete) — Splinter Review
Remembers last directory. Both for Open or Save. P.S. for Paul's testing: but only if "Save" or "Open" button on file panel was pressed ( if(result == PR_TRUE))
Paul, about crash you reported in private - it never happened here, but i used this patch with older Mozilla sources only (up to 1.2). Recently people reported numerous crashes with file picker even WITHOUT this patch, e.g. http://bugzilla.mozilla.org/show_bug.cgi?id=185946 and i got additional crash-reports on BeShare. So i'll investigate this problem, but it needs updating of my mozilla tree.
Attached patch Patch with fallback (obsolete) — Splinter Review
Added falback for non-existing folder name.
Attachment #105865 - Attachment is obsolete: true
Attachment #115169 - Flags: review?(arougthopher)
Comment on attachment 115169 [details] [diff] [review] Patch with fallback Well, my system still crashes after applying this patch and trying to open a filepicker. I am doing a full rebuild of my tree, and will test again once it is done.
reassigning to BeOS-port developer
Assignee: hyatt → sergei_d
Any news on this? (sorry for spamming) Would it be helpful if I would do a build with this patch and test if it works?
Well, I found out why this crashes on my box, since today, I was able to build with this patch applied, and no crash. The difference is that today, I had DEBUG disabled. Which, leads me to the question: Sergei, do you build mozilla with DEBUG enabled?
No, i don't. Did it only once, but no HDD room now.
I don't know what the policy is, if a patch crashes under DEBUG, but not under a normal build. Chris? Timeless?
there's no policy prohibiting it. but you probably should check it in with a line like: //XXX bug ##### this crashes in debug builds you still of course need whatever reviews are required. could someone possibly post a stack and whatever interesting things they can for the debug case so people can consider the problem?
I would post a stack crawl, if I could. The problem is, when this thing crashes, on both of my dev boxes, it does not just crash the app, but, the entire OS. Sometimes taking me to KDL, sometimes, just rebooting. I need to rebuild my dev branch w/ DEBUG enabled again, so I will give it a try, but won't promise anything.
Summary: BeZilla FilePanel don't remember last visited (for Save) folder → BeZilla FilePanel doesn't remember last visited (for Save) folder
Testing now from debug build (running from mozilla/dist/bin). No crashes yet, not application neither OS.
Comment on attachment 115169 [details] [diff] [review] Patch with fallback Well, I just did a full re-build, with this patch applied and debug enabled, and, low and behold, it crashed again. Sergei, did you rebuild/reconfigure your entire tree when you tried it? Either way, it seems to work just fine under non-debug builds, which, I guess is "ok". I just wish I knew why it was happenning. I would like to research it a bit more before I approve the patch.
Comment on attachment 115169 [details] [diff] [review] Patch with fallback Sergei, if you can create a new patch, with a comment as per timeless's suggestion, I'll approve it. However, once this patch is applied, we should create a new bug, indicating that the FilePanel crashes under DEBUG builds, so that we can track it, and, hopefully get a stack crawl, if possible.
Attachment #115169 - Flags: review?(arougthopher) → review-
Attached patch Patch with notice (obsolete) — Splinter Review
Comments added, new bug should be opened if we meet crash in DEBUG builds again.
Attachment #115169 - Attachment is obsolete: true
Comment on attachment 120690 [details] [diff] [review] Patch with notice review request
Attachment #120690 - Flags: review?(arougthopher)
Taking this one step further, so that my debug builds are usable, i.e. don't crash
Attachment #120690 - Attachment is obsolete: true
Comment on attachment 120690 [details] [diff] [review] Patch with notice updated the patch
Attachment #120690 - Flags: review?(arougthopher) → review-
Wondering if it is checked in tree or not?
Comment on attachment 120786 [details] [diff] [review] taking it one step further r=sergei_d@fi.tartu.ee sr don't required, pure port patch
Attachment #120786 - Flags: review+
Checking in nsFilePicker.cpp; /cvsroot/mozilla/widget/src/beos/nsFilePicker.cpp,v <-- nsFilePicker.cpp new revision: 1.23; previous revision: 1.22 done Checking in nsFilePicker.h; /cvsroot/mozilla/widget/src/beos/nsFilePicker.h,v <-- nsFilePicker.h new revision: 1.8; previous revision: 1.7 done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: