Bug #177720 BeZilla FilePanel doesn't remember last visited (for Save) folder patch by arougthopher@lizardland.net r=sergei_d beos only (no sr needed)